<?xml version="1.0"?>
<package>
  <name>bag_rdr</name>
  <version>0.0.1</version>
  <description>Fast bag reader library.</description>
  <maintainer email="lindsay.roberts@starship.xyz">Lindsay Roberts</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslz4</build_depend>
  <run_depend>roslz4</run_depend>
</package>
